ingress-impl/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30006
